--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -29,6 +29,8 @@ jobs:
         run: pip install -e .
       - name: paso5 - Ejecutar script de la actividad 1
         run: python src/pad/actividad_1.py
+      - name: paso6 - Ejecutar script de la actividad 2
+        run: python src/pad/actividad_2.py
         
 
       - name: Commit and Push changes
