--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.9.2'
+              python-version: '3.12'
       - name: paso1 - crea entorno virtual
         run: python -m venv venv
       - name: paso2 - activar entorno virtual
