--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -10,33 +10,43 @@ jobs:
     permissions:
       contents: write
 
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Setup Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
-              python-version: '3.12'
-      - name: paso1 - crea entorno virtual
+          python-version: '3.12'
+
+      - name: Crear entorno virtual
         run: python -m venv venv
-      - name: paso2 - activar entorno virtual
-        run: ./venv/Scripts/activate   
-      - name: paso3 - actualizar pip
-        run: pip install --upgrade pip
-      - name: paso4 - instalar dependencias
-        run: pip install -e .
-      - name: paso5 - Ejecutar script de la actividad 1
-        run: python src/pad/actividad_1.py
-      - name: paso6 - Ejecutar script de la actividad 2
-        run: python src/pad/actividad_2.py
-        
+
+      - name: Activar entorno virtual y actualizar pip
+        run: |
+          call venv\Scripts\activate
+          python -m pip install --upgrade pip
+
+      - name: Instalar dependencias (incluyendo requests)
+        run: |
+          call venv\Scripts\activate
+          pip install requests
+
+      - name: Ejecutar script de la actividad 1
+        run: |
+          call venv\Scripts\activate
+          python src/pad/actividad_1.py
+
+      - name: Ejecutar script de la actividad 2
+        run: |
+          call venv\Scripts\activate
+          python src/pad/actividad_2.py
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Entrega actividad 1
-          commit_user_name: Maria cristina ospina Lopera  [GitHub Actions]
+          commit_user_name: Maria cristina ospina Lopera [GitHub Actions]
           commit_user_email: cristina.ospina@est.iudigital.edu.co
           commit_author: Maria cristina ospina Lopera <cristina.ospina@est.iudigital.edu.co>
+
